# Maia

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS.md  CMakeLists.txt  README.md  TODO.md
maia/: CMakeLists.txt  __init__.py  cmaia.pybind.cpp  conftest.py  parallel_tree.py  pytest.ini
maia/algo/: __init__.py  apply_function_to_nodes.py  indexing.py  mesh_adaptation.py  meshb_converter.py  transform.py  tree_algo.pybind.cpp  tree_algo.pybind.hpp
maia/cgns_io/: cgns_io_tree.py  correct_tree.py  fix_tree.py  hdf.py  hdf_filter.py  lazy_load.py  load_collective_size_tree.py  save_part_tree.py
maia/cgns_registry/: cgns_keywords.cpp  cgns_keywords.hpp  cgns_keywords.py  cgns_keywords.pybind.cpp  cgns_registry.cpp  cgns_registry.hpp  cgns_registry.py  cgns_registry.pybind.cpp  tree.py
maia/connectivity/: __init__.py  cgns_to_pdm_dmeshnodal.py  conformize_jn.py  connectivity_transform.py  connectivity_transform.pybind.cpp  extract_dconnectivity.py  extract_surf_dmesh.py  generate_ngon_from_std_elements.py  merge_jn.py  ngon_to_std_elements.py  remove_element.py  std_elements_to_ngons.cpp  std_elements_to_ngons.hpp  vertex_list.py
maia/distribution/: __init__.py  distribute_nodes.py  distribution_base.py  distribution_bc_and_grid_connectivity.py  distribution_bc_dataset.py  distribution_dist_tree.py  distribution_elements.py  distribution_function.py  distribution_pl_or_pr.py  distribution_tree.py  distribution_utils.pyx  distribution_zone.py  distribution_zone_subregion.py
maia/factory/: __init__.py  dcloud_generator.py  dcube_generator.py  dist_from_part.py  dist_to_full.py  dplane_generator.py  dsphere_generator.py  full_to_dist.py
maia/generate/: cube.py  dcube_generator.py  disttree_from_parttree.py  dplane_generator.py  nodes.py
maia/geometry/: connect_match.py  extract_boundary.py  extract_boundary2.py  geometry.py  geometry.pybind.cpp  wall_distance.py  wall_distance.pybind.cpp
maia/interpolation/: domain.py  interpolate.py  mesha_to_meshb.py
maia/io/: __init__.py  _hdf_io_cass.py  _hdf_io_h5py.py  cgns_io_tree.py  distribution_tree.py  file.cpp  file.hpp  fix_tree.py  lazy_load.py  load_collective_size_tree.py  meshb_converter.py  part_tree.py  save_part_tree.py
maia/partitioning/: bnd_cgns_to_pdm.py  bnd_pdm_to_cgns.py  cgns_to_pdm_distributed_mesh.py  cgns_to_pdm_dmesh_nodal.py  parallel_tree.py  part.py  pdm_mutipart_to_cgns.py  pdm_part_to_cgns_zone.py  post_split.py  utils.py  utils.pybind.cpp  zgc_cgns_to_pdm.py  zgc_pdm_to_cgns.py
maia/pytree/: __init__.py  _unused.py  algo_utils.py  compare.py  compare_arrays.py  create_nodes.py  internal.py  nodes_attr.py  path_utils.py  print.py  pytree.pybind.cpp  pytree.pybind.hpp  shorten_names.py  typing.py  utils.py
maia/sids/: Internal_ext.py  cgns_keywords.cpp  cgns_keywords.hpp  cgns_keywords.py  cgns_keywords.pybind.cpp  cgns_name.pybind.cpp  conventions.py  element_sections.cpp  element_sections.hpp  elements_utils.py  internal.py  maia_cgns.cpp  maia_cgns.hpp  relation_utils.py  shorten_field_names.py  shorten_names.py  sids.py
maia/transfer/: __init__.py  protocols.py  utils.py
maia/transform/: __init__.py  apply_function_to_nodes.py  apply_to_bases.py  duplicate.py  flip_faces.cpp  flip_faces.hpp  fsdm_distribution.cpp  fsdm_distribution.hpp  gcs_only_for_ghosts.cpp  gcs_only_for_ghosts.hpp  merge.py  merge_by_elt_type.cpp  merge_by_elt_type.hpp  poly_algorithm.cpp  poly_algorithm.hpp  split_boundary_subzones_according_to_bcs.cpp  split_boundary_subzones_according_to_bcs.hpp  transform.py  transform.pybind.cpp  transform2.py  utils.hpp
maia/tree_exchange/: tree_transfer.py  utils.py
maia/utils/: __init__.py  addition.cpp  boundary_algorihms.pyx  cgns_utils.py  cpp_cgns_utils.hpp  dispatch.pybind.cpp  elements_algorithms.pyx  extract_from_indices.pybind.cpp  first_step.pybind.cpp  mesh_dir.hpp  mesh_dir.py  meta.py  mpi4py.hpp  mpi_scheduler.cpp  mpi_scheduler.hpp  mpi_scheduler_old.cpp  mpi_test_utils.py  multi_array_utils.hpp  parse_cgns_yaml.py  parse_yaml_cgns.py  py_utils.py  pybind_utils.hpp  script.py  script_utils.py  std_e_utils.hpp  test_utils.py  utils.pybind.cpp  utils.pybind.hpp  zone_elements_utils.py
test/: CMakeLists.txt  M6_Ilias_to_ngon.py  conftest.py  example.yaml  maia_mpi_scheduler_T1.cpp  maia_mpi_scheduler_threads.cpp  maia_python_mpi_tests.py  maia_python_unit_tests.py  maia_unit_tests.cpp  ngon_to_elts.py  print_yaml_test.py  pytest.ini  run_seq_dist_tree_to_ngon.py  test_cgns_yaml.py  test_connect_match.py  test_dcube_gen.py  test_dcube_generation.py  test_dplane_gen.py  test_duplication.py  test_elements_to_mixed.py  test_elements_to_ngons.py  test_elt_to_ngon.py  test_extract_part.py  test_fields_exchange.py  test_generate_faces.py  test_generate_interior_faces_and_parents.py  test_interpolation.py  test_interpolation_mesha_to_meshb.py  test_isosurface.py  test_merge_blocks.py  test_mesh_location.py  test_mixed_to_elements.py  test_move_fs_loc.py  test_ngons_to_elements.py  test_ngons_to_std_elements.py  test_parse_octree.py  test_parse_yaml_cgns.py  test_part_by_elt.py  test_partitioning.py  test_redistribute_dist_tree.py  (+6 more)
test/__unused/: maia_mpi_scheduler_threads.cpp
test/cgns_io/: test_cgns_io.py
test/references/: S_twoblocks_walldist.yaml  U_ATB_45_walldist.yaml  U_ATB_45_walldist_perio.yaml  U_Naca0012_multizone_merged.yaml  U_Naca0012_multizone_vl.yaml  U_dist_isosurf_NGON_n.yaml  U_dist_plane_slice_NGON_n.yaml  U_dist_plane_slice_TRI_3.yaml  U_dist_spherical_slice_QUAD_4.yaml  U_dist_spherical_slice_TRI_3.yaml  U_twoblocks_centerstonodes.yaml  U_twoblocks_facecenter_subset_s2u.yaml  U_twoblocks_vertex_subset_s2u.yaml  extract_bc_from_bc_name.yaml  extract_bcs_from_family.yaml  extract_cell.yaml  extract_cell_from_point_list.yaml  extract_cell_from_zsr.yaml  extract_cell_from_zsr_S.yaml  extract_face_from_point_list.yaml  extract_vertex_from_zsr.yaml  extract_zsr_from_family.yaml  extractor_cell_from_zsr_cell_S.yaml  extractor_cell_from_zsr_vtx_S.yaml  isosurf_NGON_n.yaml  isosurf_QUAD_4.yaml  plane_slice_NGON_n.yaml  plane_slice_TRI_3.yaml  (+3 more)
(+980 files in other folders)
